# autoblur

./: .gitignore  Cargo.toml  README.md
src/: blur.rs  main.rs
src/blur/: api.rs  browser.rs  errors.rs  http.rs  socket.rs  types.rs
src/blur/scripts/: evasions.js  fakemask.js
