[package]
name = "autoblur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full", "time"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime", "_fetcher-native-tokio"], default-features = false, branch = "main"}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "fmt", "env-filter"] }
ethers = "1.0.2"
serde_json = "=1.0.99"
serde = { version = "=1.0.164", features = ["derive"] }
async-trait = "0.1.68"
rust_decimal = { version = "1.30.0", features = ["serde-float", "serde-with-str", "serde-with-float"] }
rust_decimal_macros = "1.30.0"
chrono = { version = "0.4.26", features = ["serde"] }
regex = "1.9.0"
futures = "0.3"
tokio-stream = "0.1.14"
async-tungstenite = { version = "0.22.2", features = ["tokio-runtime", "async-tls", "tokio-rustls-webpki-roots"] }
rand = "0.8.5"
tokio-rustls = "0.24.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
thiserror = "1.0.43"
toml = "0.8.8"
